[tool.poetry]
name = "geeltermap"
version = "0.1.6"
description = "Python mapping application based on Geemap and GEE designed to provide phenology, flood and LST satellite data to eLTER sites"
authors = ["Diego García Díaz <digd.geografo@gmail.com>", "Ricardo Díaz-Delgado <rdiaz@ebd.csic.es>"]
maintainers = ["Diego García Díaz <digd.geografo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Digdgeo/GeeLTERMap"
keywords = ["eLTER", "Phenology", "Flood", "LST", "GEE", "Geemap", "Python"]

[tool.poetry.dependencies]
python = "^3.8"
geemap = "^0.29.0"
deims = "^3.1"
geopandas = "^0.12.2"
pyproj = "^3.4.1"
rasterio = "^1.3.6"
requests = "^2.28.2"
ndvi2gif = "^0.0.5"
geedim = "^1.7.1"
ipywidgets = ">=8.1.1,<9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"